# simple-tfl

./: .gitignore  .pre-commit-config.yaml  .prettierrc  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: docker-image.yml  pr-tests.yml
nginx/: nginx-dev.conf  nginx-prod.conf
src/backend/: Dockerfile  __init__.py  cache.py  logging.py  main.py  settings.py  tfl.py
src/frontend/: App.tsx  Dockerfile  entry.tsx  index.css  index.html  main.tsx  script.ts
src/frontend/compile/: main.tsx
src/frontend/compile/cv/: App.tsx
src/frontend/compile/projects/: App.tsx
src/frontend/compile/tfl/: App.css  App.tsx
src/frontend/cv/: App.tsx
src/frontend/home/: App.css  App.tsx  canvas.tsx
src/frontend/projects/: App.css  App.tsx
src/frontend/tfl/: App.css  App.tsx
src/server/: __init__.py  _types.py  cache.py  main.py  settings.py  tfl.py
tests/server/unit/: test_async_ttl_cache.py  test_ttl_cache.py
