[project]
name = "simple-tfl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "websockets>=15.0.1",
]

[tool.ruff]
lint.select = [
    "E",      # pycodestyle (syntax/correctness)
    "F",      # pyflakes (undefined names, etc.)
    "ANN",    # type annotations
    "ARG",    # unused arguments
    "RET",    # return rules
    "N",      # naming conventions
    "I",      # import sorting
    "UP",     # pyupgrade
]

# Enforce: absolutely no Any usage allowed
# (ANN401 = "Any should not be used")
lint.unfixable = ["ANN401"]

line-length = 100
target-version = "py312"
fix = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
