[project]
name = "simple-tfl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.5",
    "freezegun>=1.5.5",
    "mypy>=1.19.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "ruff>=0.14.7",
    "starlette>=0.50.0",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[tool.ruff]
lint.select = [
    "E",      # pycodestyle (syntax/correctness)
    "F",      # pyflakes (undefined names, etc.)
    "ANN",    # type annotations
    "ARG",    # unused arguments
    "RET",    # return rules
    "N",      # naming conventions
    "I",      # import sorting
    "UP",     # pyupgrade
]

# Enforce: absolutely no Any usage allowed
# (ANN401 = "Any should not be used")
lint.unfixable = ["ANN401"]

line-length = 89
target-version = "py313"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
